Fix presentation on mobile devices.

--- a/ippsample.css
+++ b/ippsample.css
@@ -12,6 +12,7 @@ a.button {
   margin: 0px 5px;
   padding: 8px 16px;
   text-decoration: none;
+  white-space: nowrap;
 }
 a.button:hover {
   background: #262d54;
@@ -21,7 +22,7 @@ a.button:hover {
 .head {
   background: #181814;
   background-image: linear-gradient(#181814, #4b5aa8);
-  height: 400px;
+  padding: 50px 0px;
   width: 100%;
   z-index: 100 !important;
 }
@@ -29,7 +30,7 @@ a.button:hover {
 .foot {
   background: #181814;
   background-image: linear-gradient(#4b5aa8, #181814);
-  height: 80px;
+  padding: 15px 0px;
   margin: 20px 0px 0px 0px;
   width: 100%;
   z-index: 100 !important;
@@ -46,6 +47,13 @@ a.button:hover {
 }
 .head a.button:hover, .foot a.button:hover {
   background: #eee;
+}
+
+.mobile {
+  display: none;
+}
+.no-mobile {
+  display: inline;
 }
 
 /* API documentation styles... */
@@ -330,4 +338,23 @@ div.body dt {
 }
 div.body dd {
   margin-bottom: 0.5em;
+}
+
+/* iPhone/iPod touch overrides */
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px),
+       only screen and (min-device-width: 320px) and (max-device-width: 568px) {
+  .head {
+    padding: 10px 0px;
+  }
+
+  .foot {
+    padding: 5px 0px;
+  }
+
+  .mobile {
+    display: inline;
+  }
+  .no-mobile {
+    display: none;
+  }
 }
